--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "~4.12.2",
     "jade": "~1.9.2",
     "socket.io": "1.3.5",
-    "infinigon": "*"
+    "infinigon": "*",
+    "infinigon-free-all": "*"
   }
 }
