--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jade": "~1.9.2",
     "socket.io": "1.3.5",
     "infinigon": "*",
-    "infinigon-free-all": "*"
+    "infinigon-free-all": "*",
+    "infinigon-infection": "*"
   }
 }
